# pydepta

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
pydepta/: depta.py  mdr.py  trees.py  trees_cython.c
pydepta/tests/: test_depta.py
